# RP2A03_synth

./: .gitignore  Cargo.toml  README.md
rp2a03_common/: Cargo.toml
rp2a03_common/src/: gui.rs  knob.rs  lib.rs
rp2a03_core/: Cargo.toml
rp2a03_core/src/: blip.rs  blip_buf.rs  lib.rs  nes_core.rs  nes_noise.rs  nes_square.rs  nes_triangle.rs
rp2a03_nice/: Cargo.toml
rp2a03_nice/src/: lib.rs  midi_helper.rs
rp2a03_nih/: Cargo.toml
rp2a03_nih/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
